force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Case object of the VCV Case related to the Service Appointment. Used for reporting purposes.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Appointment Metrics</relationshipLabel>
    <relationshipName>Service_Appointment_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>