force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/Case_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Case_Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looking up to the Case Metrics record for the VCV Case associated with the Service Appointment. Used for reporting purposes.</description>
    <label>Case Metrics</label>
    <referenceTo>VCC_Case_Metrics__c</referenceTo>
    <relationshipLabel>Service Appointment Metrics</relationshipLabel>
    <relationshipName>Service_Appointment_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>