force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_Appointment_Entry_After_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Entry_After_Due_Date__c</fullName>
    <description>Returns true if the appointment was entered/created after the appointment due date.</description>
    <formula>IF(VCC_Appointment_Made_Date_Time__c &gt; Case_Metrics__r.VCC_Appt_Due_Date__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Entry After Due Date</label>
    <type>Checkbox</type>
</CustomField>