force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_Appointment_Made_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Made_Date_Time__c</fullName>
    <description>Removes the timestamp when the related Service Appointment CreatedDate is used for reporting.  Need this formula to display the full date time for reporting purposes.</description>
    <formula>DATETIMEVALUE(Service_Appointment__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Made Date Time</label>
    <type>DateTime</type>
</CustomField>