force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_CT_Care_Recommendation_Hours__c.field-meta.xml
<CustomField>
    <fullName>VCC_CT_Care_Recommendation_Hours__c</fullName>
    <description>Follow Up Appointment Needed</description>
    <formula>TEXT(Case__r.Parent.VCC_Follow_Up_Appt_Needed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CT Care Recommendation Hours</label>
    <type>Text</type>
</CustomField>