force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_Provided_within_CT_RFI__c.field-meta.xml
<CustomField>
    <fullName>VCC_Provided_within_CT_RFI__c</fullName>
    <description>Returns True if the Appt time for VCV appt was done within CT care recommendation.</description>
    <formula>IF(Service_Appointment__r.SchedStartTime &lt;= Case_Metrics__r.VCC_Appt_Due_Date__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provided within CT RFI</label>
    <type>Checkbox</type>
</CustomField>