force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_Time_From_Appt_Made_to_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Time_From_Appt_Made_to_Appt_Date__c</fullName>
    <description>Time elapsed from Appointment Made Date/Time to Appointment Date/Time</description>
    <formula>(Service_Appointment__r.SchedStartTime - Service_Appointment__r.CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time From Appt Made to Appt Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>