force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_Time_From_Sched_Case_to_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Time_From_Sched_Case_to_Appt_Date__c</fullName>
    <description>The time elapsed from Scheduling Case creation date to the VCV Appt.</description>
    <formula>VCC_Time_From_Sched_Case_to_Appt_Created__c + VCC_Time_From_Appt_Made_to_Appt_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time From Sched Case to Appt Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>