force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_VISN_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN_Scheduled_Start__c</fullName>
    <description>The time the appointment is scheduled to start based on the VISN time zone</description>
    <formula>IF ( DATEVALUE( Service_Appointment__r.SchedStartTime ) &gt;= DATE ( YEAR (DATEVALUE(Service_Appointment__r.SchedStartTime)),3,1) +
( 14-
CASE( MOD(DATE ( YEAR (DATEVALUE(Service_Appointment__r.SchedStartTime)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Service_Appointment__r.SchedStartTime)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(Service_Appointment__r.SchedStartTime) &lt; DATE ( YEAR (DATEVALUE(Service_Appointment__r.SchedStartTime)),11,1) +
( 7-
CASE( MOD(DATE ( YEAR (DATEVALUE(Service_Appointment__r.SchedStartTime)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Service_Appointment__r.SchedStartTime)),11,1) - DATE (1900,1,7),7))
),
MID(TEXT( Service_Appointment__r.SchedStartTime + ((1+VCC_VISN_Time_Zone_Offset__c) / 24) ),12,5),
MID(TEXT( Service_Appointment__r.SchedStartTime + (VCC_VISN_Time_Zone_Offset__c / 24) ),12,5)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Start Time</label>
    <type>Text</type>
</CustomField>