force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_VISN_Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN_Scheduled_Start_Date__c</fullName>
    <description>The date the appointment is scheduled to start.</description>
    <formula>DATEVALUE( Service_Appointment__r.SchedStartTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Start Date</label>
    <type>Date</type>
</CustomField>