force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/fields/VCC_VISN_Scheduled_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN_Scheduled_Start_Day__c</fullName>
    <description>Get the date of the appointment and returns the day of the week</description>
    <formula>Case(weekday(DATEVALUE( Service_Appointment__r.SchedStartTime )),
1, &quot;Sunday&quot;,
2, &quot;Monday&quot;,
3, &quot;Tuesday&quot;,
4, &quot;Wednesday&quot;,
5, &quot;Thursday&quot;,
6, &quot;Friday&quot;,
7, &quot;Saturday&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt Sched Start Day</label>
    <type>Text</type>
</CustomField>