force-app/main/default/objects/VCC_Service_Appointment_Metrics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VCC_Appointment_Made_Date_Time__c</columns>
    <columns>VCC_Cancellation_Remarks__c</columns>
    <columns>Case__c</columns>
    <columns>VCC_Provided_within_CT_RFI__c</columns>
    <columns>Case_Metrics__c</columns>
    <columns>VCC_Gender_Identity__c</columns>
    <columns>VCC_Appointment_Entry_After_Due_Date__c</columns>
    <columns>Service_Appointment__c</columns>
    <columns>VCC_Time_From_Appt_Made_to_Appt_Date__c</columns>
    <columns>VCC_Time_From_Sched_Case_to_Appt_Created__c</columns>
    <columns>VCC_Time_From_Sched_Case_to_Appt_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>